NXT-180: Code cleanup: formatting, docs, equality test operand order.
Fixed the check for whether the node model is dislocated or in the same JVM (AbstractRpcClient#isConnectedRemotely).

NXT-180 (RPC framework for node data services)